# python-sandpit

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check-links.yml  lint.yml  python-unit-tests.yml
_starter_kit/: README.md
_starter_kit/src/: thing.py
_starter_kit/tests/: test_thing.py
_starter_kit/tests/model/: test_thing.py
fox_goose_corn/: README.md
fox_goose_corn/src/: crossing_manager.py
fox_goose_corn/src/exceptions/: cannot_cross_to_existing_side_exception.py
fox_goose_corn/src/model/: boat.py  cargo_item.py  river.py
fox_goose_corn/tests/: test_boat.py  test_crossing_manager.py
fox_goose_corn/tests/model/: test_boat.py  test_cargo_item.py
list_things/: README.md
list_things/src/: continuous_subset.py  scattered_subset.py  subset.py
list_things/tests/: test_continuous_subset.py  test_scattered_subset.py  test_subset.py
sadiqs_scooters/: README.md  exceptions.py  rental.py  rental_service.py  scooter.py
sadiqs_scooters/src/: rental_service.py
sadiqs_scooters/src/exceptions/: person_already_renting_exception.py  scooter_already_rented_exception.py
sadiqs_scooters/src/model/: rental.py
sadiqs_scooters/tests/: rental_service_test.py
tests/sadiqs_scooters/: test_rental_service.py
thing_rental/: README.md  rental_service.py  test_rental_service.py
thing_rental/model/: rental.py
thing_rental/src/: rental_service.py
thing_rental/src/exceptions/: thing_already_rented_exception.py
thing_rental/tests/: test_rental_service.py
(+3 files in other folders)
