[tool.poetry]
name = "python-sandpit"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
mutmut = { git = "git@github.com:boxed/mutmut.git", branch = "main" }

[tool.black]
line-length = 100

[tool.mutmut]
paths_to_mutate = [ "thing_rental/" ]
