[tool.poetry]
name = "python-sandpit"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^4.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
mutmut = "^3.3.0"

[tool.black]
line-length = 100

[tool.mutmut]
paths_to_mutate = [
    "_starter_kit/",
    "fox_goose_corn/",
    "list_things/",
    "thing_rental/"
]
do_not_mutate = [
    "**/tests/*"
]

[tool.pytest.ini_options]
addopts = "--ignore ./mutants"
